Fixed icons alignment in box

--- a/packages/ketchup/src/components/kup-box/kup-box.scss
+++ b/packages/ketchup/src/components/kup-box/kup-box.scss
@@ -93,7 +93,8 @@
         &.center-aligned {
           text-align: center;
           kup-image,
-          kup-checkbox {
+          kup-checkbox,
+          kup-icon {
             justify-content: center;
           }
         }
@@ -101,7 +102,8 @@
         &.left-aligned {
           text-align: left;
           kup-image,
-          kup-checkbox {
+          kup-checkbox,
+          kup-icon {
             justify-content: flex-start;
           }
         }
@@ -109,7 +111,8 @@
         &.right-aligned {
           text-align: right;
           kup-image,
-          kup-checkbox {
+          kup-checkbox,
+          kup-icon {
             justify-content: flex-end;
           }
         }
@@ -117,7 +120,8 @@
         .box-object {
           padding: 1px 4px;
           kup-image,
-          kup-checkbox {
+          kup-checkbox,
+          kup-icon {
             display: flex;
           }
 
